--- a/app/src/main/res/layout/activity_movie_catalog.xml
+++ b/app/src/main/res/layout/activity_movie_catalog.xml
@@ -13,12 +13,25 @@
         android:textColor="#FFFFFF"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvTitle"
+        android:layout_margin="8dp"
+        android:background="#1E1E1E"
+        android:queryHint="Buscar película..."
+        android:iconifiedByDefault="false"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvMovies"
-        android:layout_below="@id/tvTitle"
+        android:layout_below="@id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="8dp"/>
 
 </RelativeLayout>
