UX/UI y Base de datos en la nube (Firebase) para favoritos.

--- a/app/src/main/res/layout/activity_movie_catalog.xml
+++ b/app/src/main/res/layout/activity_movie_catalog.xml
@@ -16,7 +16,8 @@
             android:layout_height="?attr/actionBarSize"
             android:background="#E50914"
             app:title="CineApp"
-            app:titleTextColor="#FFFFFF" />
+            app:titleTextColor="#FFFFFF"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/searchView"
@@ -24,6 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/toolbar"
             android:layout_margin="8dp"
+            android:background="#1E1E1E"
             android:queryHint="Buscar película..."
             android:iconifiedByDefault="false"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
@@ -33,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottom_navigation"
-            android:layout_below="@id/searchView" />
+            android:layout_below="@id/searchView"
+            android:layout_marginTop="8dp"/>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
@@ -52,6 +55,8 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="#121212"
+        app:itemTextColor="#FFFFFF"
         app:headerLayout="@layout/nav_header" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
