--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#121212">
 
     <LinearLayout
@@ -67,7 +68,15 @@
                 android:textSize="16sp"
                 android:lineSpacingExtra="4dp"/>
 
-
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fabFavorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end|bottom"
+                android:layout_margin="16dp"
+                android:src="@drawable/ic_favorite"
+                app:backgroundTint="#E50914"
+                app:tint="#FFFFFF" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
