--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="176dp"
     android:background="#E50914"
     android:gravity="bottom"
     android:orientation="vertical"
@@ -15,16 +15,18 @@
         android:layout_marginBottom="8dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Usuario Activo"
-        android:textStyle="bold"
-        android:textSize="18sp" />
+        android:layout_marginTop="10dp"
+        android:text="Bienvenido a CineApp"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvUserEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="correo@ejemplo.com" />
+        android:text="usuario@email.com"
+        android:textColor="#FFFFFF" />
 
-</LinearLayout>
+    </LinearLayout>
